--- a/css/styles.css
+++ b/css/styles.css
@@ -81,3 +81,77 @@ header nav .btn-primary {
     justify-content: center;
 }
 
+/* Section Features Cards */
+
+.s-card-features {
+    background-color: var(--gray-colors-100);
+    padding-top: 10.4rem;
+    padding-bottom: 12rem;
+}
+
+.s-card-features .main-area {
+    border-bottom: 1px solid rgba(255, 255, 255, 0.25);
+    padding-bottom: 12.5rem;
+}
+
+.s-card-features .title {
+    display: flex;
+    flex-direction: column;
+}
+
+.s-card-features .title.center {
+   align-items: center;
+}
+
+.s-card-features .title p {
+    margin-top: 0.8rem;
+}
+
+.s-card-features {
+    color: var(--white-colors-text);
+}
+
+.s-card-features .all-cards {
+    display: flex;
+    justify-content: space-between;
+    margin-top: 4.8rem;
+}
+
+.s-card-features .all-cards .card {
+    width: 100%;
+    max-width: 38.4rem;
+    height: 38.2rem;
+    background-color: rgba(28, 29, 31, 0.5);
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding-top: 6.4rem;
+}
+
+.s-card-features .all-cards .card.white {
+    background-color: var(--white);
+}
+
+.s-card-features .all-cards .card.white h3 {
+    color: var(--gray-colors-100)
+}
+
+
+.s-card-features .all-cards .card.white p {
+    color: var(--gray-colors-300);
+}
+
+.s-card-features .all-cards .card .info {
+    margin-top: 4rem;
+    max-width: 28.8rem;
+}
+
+.s-card-features .all-cards .card .info h3 {
+    text-align: center;
+}
+
+.s-card-features .all-cards .card .info p {
+    text-align: center;
+    margin-top: 0.8rem;
+    line-height: 150%;
+}
