--- a/css/styles.css
+++ b/css/styles.css
@@ -155,3 +155,34 @@ header nav .btn-primary {
     margin-top: 0.8rem;
     line-height: 150%;
 }
+
+.s-card-features .second-area {
+    margin-top: 11.2rem;
+    text-align: center;
+
+}
+
+.s-card-features .second-area .top {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    margin-bottom: 6.4rem;
+}
+
+.s-card-features .second-area .all-imgs {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 3.2rem;
+
+}
+
+.s-card-features .second-area .all-imgs .image {
+    display: flex;
+    width: 176px;
+    height: 112px;
+    background-color: var(--gray-colors-200);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
+}
