--- a/css/responsive.css
+++ b/css/responsive.css
@@ -9,7 +9,14 @@
 
     .s-card-features .all-cards .card {
         width: 31%;
+    }
 
+    .s-card-features .second-area .all-imgs {
+        gap: 2rem 2%;
+    }
+
+    .s-card-features .second-area .all-imgs .image {
+        width: 23.5%;
     }
 
 }
@@ -71,8 +78,24 @@
 }
 
 @media(max-width: 600x) {
+    .s-card-features .second-area .top {
+        flex-direction: column;
+        align-items: center;
+    }
 
-    
+    .s-card-features .second-area .top .title h2,
+    .s-card-features .second-area .top .title p {
+        text-align: center;
+    }
+
+    .s-card-features .second-area .top .title h2 {
+        margin-bottom: 8px;
+    }
+
+    .s-card-features .second-area .top .title {
+        margin-bottom: 20px;
+    }
+
 }
 
 @media(max-width: 480px) {
@@ -115,6 +138,26 @@
 
     .s-card-features .main-area {
         padding-bottom: 4rem;
+    }
+
+    .s-card-features .second-area {
+        margin-top: 4rem;
+    }
+
+    .s-card-features .second-area .top {
+        margin-bottom: 3rem;
+    }
+
+    .s-card-features .second-area .top p {
+        margin: 0 auto;
+    }
+    
+    .s-card-features .second-area .all-imgs {
+        gap: 0.5rem 2%;
+    }
+
+    .s-card-features .second-area .all-imgs .image {
+        width: 29%;
     }
 }
 
