--- a/css/responsive.css
+++ b/css/responsive.css
@@ -77,7 +77,7 @@
     
 }
 
-@media(max-width: 600x) {
+@media(max-width: 600px) {
     .s-card-features .second-area .top {
         flex-direction: column;
         align-items: center;
@@ -159,5 +159,10 @@
     .s-card-features .second-area .all-imgs .image {
         width: 29%;
     }
+
+    .s-newsletter {
+        padding: 4rem 0;
+    }
 }
+
 
