--- a/css/styles.css
+++ b/css/styles.css
@@ -158,7 +158,6 @@ header nav .btn-primary {
 
 .s-card-features .second-area {
     margin-top: 11.2rem;
-    text-align: center;
 
 }
 
@@ -185,4 +184,68 @@ header nav .btn-primary {
     align-items: center;
     justify-content: center;
 
+}
+
+/* Section Newsletter */
+
+.s-newsletter {
+    padding: 15.2rem 0rem;
+    background-color: var(--gray-colors-200);
+}
+
+.s-newsletter .container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.s-newsletter h2 {
+    margin-bottom: 2rem;
+    text-align: center;
+}
+
+.s-newsletter p {
+    text-align: center;
+    max-width: 69.4rem;
+    color: var(--white-colors-text);
+    margin-bottom: 40px;
+
+}
+
+.s-newsletter .btn-primary {
+    padding: 1.75rem 4.1rem;
+}
+
+/* Footer */
+footer {
+    background-color: var(--gray-colors-100);
+    padding-top: 8.8rem;
+    padding-bottom: 3.9rem;
+}
+
+footer main {
+    display: flex;
+    align-items: flex-start;
+    justify-content: space-between;
+    border-bottom: 1px solid rgba(255, 255, 255, 0.2);
+    padding-bottom: 7.2rem;
+}
+
+footer main .area-left {
+    max-width: 28.1rem;
+}
+
+footer main .area-left p {
+    font-size: 1.4rem;
+    line-height: 150%;
+    color: var(--white-colors-text);
+    margin-top: 3.5rem;
+}
+
+footer main nav {
+    display: flex;
+    align-items: flex-start;
+    justify-content: space-between;
+    width: 100%;
+    max-width: 77.7rem;
 }
