--- a/css/patterns.css
+++ b/css/patterns.css
@@ -26,7 +26,12 @@ h3 {
     padding: 1.2rem 3.4rem;
     font-weight: 600;
     letter-spacing: -0.01em;
-    color: var(--brand-colors-100)
+    color: var(--brand-colors-100);
+    transition: transform .3s;
+}
+
+.btn-primary:hover {
+    transform: scale(1.05);
 }
 
 .menu-item {
@@ -36,5 +41,12 @@ h3 {
     font-size: 1.5rem;
     line-height: 105%;
     letter-spacing: -0.01rem;
-    color: var(--gray-colors-400)
+    color: var(--gray-colors-400);
+    transition: all .3s;
+}
+
+.menu-item:hover {
+    background-color: #acb4bf ;
+    color: var(--white);
+    
 }
