--- a/css/responsive.css
+++ b/css/responsive.css
@@ -19,6 +19,9 @@
         width: 23.5%;
     }
 
+    footer main nav {
+        max-width: 63rem;
+    }
 }
 
 @media(max-width: 991px) {
@@ -70,11 +73,32 @@
         max-width: 100%;
         margin-top: 2rem;
     }
+
+    footer main nav {
+        max-width: 45rem;
+    }
 }
 
 @media(max-width: 768px) {
+    footer main {
+        flex-direction: column;
+        align-items: center;
+    }
 
+    footer main .area-left {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        margin-bottom: 4rem;
+    }
     
+    footer main .area-left p {
+        text-align: center;
+    }
+
+    footer main nav {
+        max-width: 100%;
+    }
 }
 
 @media(max-width: 600px) {
@@ -93,7 +117,7 @@
     }
 
     .s-card-features .second-area .top .title {
-        margin-bottom: 20px;
+        margin-bottom: 2rem;
     }
 
 }
@@ -162,6 +186,42 @@
 
     .s-newsletter {
         padding: 4rem 0;
+    }
+
+    footer {
+        padding: 4rem 0;
+    }
+
+    footer main {
+        padding-bottom: 4rem;
+    }
+
+    footer .copy {
+        flex-direction: column;
+    }
+
+    footer .copy p {
+        margin-bottom: 2rem;
+    }
+
+    footer main nav {
+        flex-direction: column;
+        align-items: center;
+    }
+
+    footer main nav .item {
+        margin-bottom: 4rem;
+    }
+
+    footer main nav .item:last-child {
+        margin-bottom: 0;
+    }
+
+    footer main nav .item ul {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+
     }
 }
 
